syntax = "proto3";

package api;

option go_package = "pkg/api";

import "api/proto/profile.proto";
import "api/proto/shop_summary.proto";
import "api/proto/payment_info.proto";

service Keeper {
  rpc Ask (AskRequest) returns (AskResponse) {}
}

message AskRequest {
  Profile profile = 1;
  ShopSummary shop_summary = 2;
  PaymentInfo payment_info = 3;
}

message AskResponse {
  bool allow_pass = 1;
}