syntax = "proto3";

package api;

message PaymentInfo {
    int32 ddd_billing_address = 1;
    string cardholder_name = 2;
}