syntax = "proto3";

package api;

message ShopSummary {
    int32 total_orders = 1;
}